--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  a {
+    text-underline-offset: 4px;
+  }
+}
+
 .task-list-item::before {
   @apply hidden;
 }
@@ -48,4 +54,23 @@ input:-webkit-autofill:focus {
 .linkicon {
   display: inline-block;
   vertical-align: middle;
+}
+
+@supports (animation-timeline: scroll()) {
+  .scroll-progress {
+    animation: grow-progress auto linear;
+    transform-origin: 0 50%;
+    animation-timeline: scroll(root);
+  }
+
+  @keyframes grow-progress {
+    from { transform: scaleX(0); }
+    to { transform: scaleX(1); }
+  }
+}
+
+@supports not (animation-timeline: scroll()) {
+  .scroll-progress {
+    display: none;
+  }
 }
