--- a/css/transition.css
+++ b/css/transition.css
@@ -1,3 +1,13 @@
 @view-transition {
   navigation: auto;
 }
+
+::view-transition-old(*),
+::view-transition-new(*) {
+  height: 100%;
+  width: auto;
+}
+
+::view-transition-group(*) {
+  overflow: hidden;
+}
